eks/aws-test-pod-ident.yml
apiVersion: v1
kind: Pod
metadata:
  name: aws-test
spec:
  serviceAccountName: pod-ident-sa
  containers:
    - name: aws-cli
      image: public.ecr.aws/aws-cli/aws-cli
      command: ["sleep", "3600"]
  restartPolicy: Never
