eks/k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixel-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pixel-monitor
  template:
    metadata:
      labels:
        app: pixel-monitor
    spec:
      serviceAccountName: pod-ident-sa
      containers:
        - name: pixel-backend
          image: 802838070254.dkr.ecr.us-east-1.amazonaws.com/pixel-monitor:fb57bc7764c8ac1fd7b49a366fe1a764d62cf99f
          imagePullPolicy: Always # IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: pixel-monitor-service
spec:
  selector:
    app: pixel-monitor
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
