eks/k8s_hpa.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixel-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pixel-monitor
  template:
    metadata:
      labels:
        app: pixel-monitor
    spec:
      serviceAccountName: pod-ident-sa

      containers:
        - name: pixel-backend
          image: 802838070254.dkr.ecr.us-east-1.amazonaws.com/pixel-monitor:v1
          imagePullPolicy: Always # IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8000
              httpHeaders:
                - name: Host
                  value: k8s-default-pixelmon-45cde402f9-273315686.us-east-1.elb.amazonaws.com
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: pixel-monitor-service
spec:
  selector:
    app: pixel-monitor
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
